<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>tech.artcoded</groupId>
  <artifactId>artcoded-parent</artifactId>
  <version>2026.1.4-SNAPSHOT</version>

  <name>ARTCODED - ROOT</name>

  <packaging>pom</packaging>

  <developers>
    <developer>
      <name>Nordine Bittich</name>
      <email>contact@bittich.be</email>
      <organization>ARTCODED</organization>
      <organizationUrl>https://bittich.be</organizationUrl>
      <url>https://github.com/openartcoded/backend</url>
      <roles>
        <role>Developer</role>
      </roles>
    </developer>
    <developer>
      <name>Soultan Hatsijev</name>
      <url>https://github.com/aspirio187</url>
      <roles>
        <role>Developer</role>
      </roles>
    </developer>
  </developers>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <poi.version>5.4.1</poi.version>
    <java.version>24</java.version>
    <spring.boot.starter.version>3.5.6</spring.boot.starter.version>
    <json-path.version>2.9.0</json-path.version>
    <commons-lang3.version>3.19.0</commons-lang3.version>
    <commons-text.version>1.14.0</commons-text.version>
    <caffeine.version>3.2.2</caffeine.version>
    <commons-io.version>2.20.0</commons-io.version>
    <javax.inject.version>1</javax.inject.version>
    <jena-core.version>5.5.0</jena-core.version>
    <camel.version>4.14.0</camel.version>
    <commonmark.version>0.26.0</commonmark.version>
    <zt-exec.version>1.12</zt-exec.version>
    <springdoc.version>2.8.13</springdoc.version>
    <zip4j.version>2.11.5</zip4j.version>
    <thumbnailator.version>0.4.20</thumbnailator.version>
    <java-wkhtmltopdf-wrapper.version>1.3.0-RELEASE</java-wkhtmltopdf-wrapper.version>
    <mongock.version>5.5.1</mongock.version>
    <micrometer-registry-prometheus.version>1.15.4</micrometer-registry-prometheus.version>
    <spring-shell.version>3.4.1</spring-shell.version>
    <jakarta.mail.version>2.0.2</jakarta.mail.version>
    <greenmail.version>2.1.6</greenmail.version>
    <commons-compress.version>1.28.0</commons-compress.version>
    <pdfbox-tools.version>3.0.5</pdfbox-tools.version>
    <!-- <graalvm.js.version>23.0.4</graalvm.js.version> -->
    <graalvm.version>25.0.1</graalvm.version>
    <angus.mail.version>2.0.5</angus.mail.version>
    <phive.version>11.0.1</phive.version>
    <phive-rules-peppol.version>4.0.1</phive-rules-peppol.version>
    <ph-ubl.version>10.0.0</ph-ubl.version>
    <qrcodegen.version>1.8.0</qrcodegen.version>
    <sshd-core.version>2.16.0</sshd-core.version>
    <!-- <ical4j.version>3.2.18</ical4j.version> -->
    <lombok.version>1.18.42</lombok.version>
  </properties>

  <scm>
    <connection>
      scm:git:git@github.com:openartcoded/backend.git
    </connection>
    <tag>HEAD</tag>
  </scm>

  <dependencyManagement>
    <dependencies>

      <dependency>
        <groupId>com.helger.ubl</groupId>
        <artifactId>ph-ubl21</artifactId>
        <version>${ph-ubl.version}</version>
      </dependency>
      <dependency>
        <groupId>org.projectlombok</groupId>
        <artifactId>lombok</artifactId>
        <version>${lombok.version}</version>
        <scope>provided</scope>
      </dependency>
      <!-- https://mvnrepository.com/artifact/org.springframework.shell/spring-shell-starter -->
      <dependency>
        <groupId>org.springframework.shell</groupId>
        <artifactId>spring-shell-starter</artifactId>
        <version>${spring-shell.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.sshd</groupId>
        <artifactId>sshd-core</artifactId>
        <version>${sshd-core.version}</version>
      </dependency>
      <dependency>
        <groupId>io.nayuki</groupId>
        <artifactId>qrcodegen</artifactId>
        <version>${qrcodegen.version}</version>
      </dependency>
      <dependency>
        <groupId>com.helger.phive.rules</groupId>
        <artifactId>phive-rules-peppol</artifactId>
        <version>${phive-rules-peppol.version}</version>
      </dependency>
      <dependency>
        <groupId>com.helger.phive</groupId>
        <artifactId>phive-xml</artifactId>
        <version>${phive.version}</version>
      </dependency>
      <dependency>
        <groupId>com.helger.phive</groupId>
        <artifactId>phive-result</artifactId>
        <version>${phive.version}</version>
      </dependency>
      <!-- can be remove -->
      <!-- <dependency> -->
      <!--   <groupId>org.mnode.ical4j</groupId> -->
      <!--   <artifactId>ical4j</artifactId> -->
      <!--   <version>${ical4j.version}</version> -->
      <!-- </dependency> -->
      <dependency>
        <groupId>org.apache.pdfbox</groupId>
        <artifactId>pdfbox-tools</artifactId>
        <version>${pdfbox-tools.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-compress</artifactId>
        <version>${commons-compress.version}</version>
      </dependency>
      <dependency>
        <groupId>org.eclipse.angus</groupId>
        <artifactId>angus-mail</artifactId>
        <version>${angus.mail.version}</version>
      </dependency>
      <dependency>
        <groupId>com.sun.mail</groupId>
        <artifactId>jakarta.mail</artifactId>
        <version>${jakarta.mail.version}</version>
      </dependency>
      <dependency>
        <groupId>com.icegreen</groupId>
        <artifactId>greenmail-junit5</artifactId>
        <version>${greenmail.version}</version>
      </dependency>
      <dependency>
        <groupId>jakarta.xml.bind</groupId>
        <artifactId>jakarta.xml.bind-api</artifactId>
        <version>4.0.4</version>
      </dependency>
      <dependency>
        <groupId>org.glassfish.jaxb</groupId>
        <artifactId>jaxb-runtime</artifactId>
        <version>4.0.6</version>
      </dependency>
      <dependency>
        <groupId>tech.artcoded</groupId>
        <artifactId>event</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.micrometer</groupId>
        <artifactId>micrometer-registry-prometheus</artifactId>
        <version>${micrometer-registry-prometheus.version}</version>
      </dependency>
      <dependency>
        <groupId>io.mongock</groupId>
        <artifactId>mongock-bom</artifactId>
        <version>${mongock.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

      <dependency>
        <groupId>org.apache.poi</groupId>
        <artifactId>poi</artifactId>
        <version>${poi.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.poi</groupId>
        <artifactId>poi-ooxml</artifactId>
        <version>${poi.version}</version>
      </dependency>
      <dependency>
        <groupId>net.lingala.zip4j</groupId>
        <artifactId>zip4j</artifactId>
        <version>${zip4j.version}</version>
      </dependency>
      <dependency>
        <groupId>org.zeroturnaround</groupId>
        <artifactId>zt-exec</artifactId>
        <version>${zt-exec.version}</version>
      </dependency>
      <dependency>
        <groupId>org.commonmark</groupId>
        <artifactId>commonmark</artifactId>
        <version>${commonmark.version}</version>
      </dependency>
      <dependency>
        <groupId>org.springdoc</groupId>
        <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
        <version>${springdoc.version}</version>
      </dependency>
      <dependency>
        <groupId>net.coobird</groupId>
        <artifactId>thumbnailator</artifactId>
        <version>${thumbnailator.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.camel.springboot</groupId>
        <artifactId>camel-spring-boot-starter</artifactId>
        <version>${camel.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.camel</groupId>
        <artifactId>camel-jackson</artifactId>
        <version>${camel.version}</version>
        <exclusions>
          <exclusion>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
          </exclusion>
        </exclusions>
      </dependency>
      <dependency>
        <groupId>org.apache.camel</groupId>
        <artifactId>camel-mail</artifactId>
        <version>${camel.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.camel</groupId>
        <artifactId>camel-jms</artifactId>
        <version>${camel.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.camel</groupId>
        <artifactId>camel-ftp</artifactId>
        <version>${camel.version}</version>
      </dependency>
      <dependency>
        <groupId>com.github.jhonnymertz</groupId>
        <artifactId>java-wkhtmltopdf-wrapper</artifactId>
        <version>${java-wkhtmltopdf-wrapper.version}</version>
      </dependency>
      <dependency>
        <groupId>com.jayway.jsonpath</groupId>
        <artifactId>json-path</artifactId>
        <version>${json-path.version}</version>
      </dependency>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <version>${spring.boot.starter.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-lang3</artifactId>
        <version>${commons-lang3.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-text</artifactId>
        <version>${commons-text.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.jena</groupId>
        <artifactId>jena-core</artifactId>
        <version>${jena-core.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.jena</groupId>
        <artifactId>jena-arq</artifactId>
        <version>${jena-core.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.jena</groupId>
        <artifactId>jena-rdfconnection</artifactId>
        <version>${jena-core.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.jena</groupId>
        <artifactId>jena-shacl</artifactId>
        <version>${jena-core.version}</version>
      </dependency>
      <dependency>
        <groupId>com.github.ben-manes.caffeine</groupId>
        <artifactId>caffeine</artifactId>
        <version>${caffeine.version}</version>
      </dependency>
      <dependency>
        <groupId>org.graalvm.js</groupId>
        <artifactId>js-scriptengine</artifactId>
        <version>${graalvm.version}</version>
      </dependency>
      <dependency>
        <groupId>org.graalvm.sdk</groupId>
        <artifactId>graal-sdk</artifactId>
        <version>${graalvm.version}</version>
      </dependency>

      <dependency>
        <groupId>org.graalvm.polyglot</groupId>
        <artifactId>js-community</artifactId>
        <version>${graalvm.version}</version>
        <type>pom</type>
      </dependency>
      <dependency>
        <groupId>commons-io</groupId>
        <artifactId>commons-io</artifactId>
        <version>${commons-io.version}</version>
      </dependency>
      <dependency>
        <groupId>javax.inject</groupId>
        <artifactId>javax.inject</artifactId>
        <version>${javax.inject.version}</version>
      </dependency>

    </dependencies>
  </dependencyManagement>
  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.11.0</version>
          <configuration>
            <release>${java.version}</release>
            <source>${java.version}</source>
            <target>${java.version}</target>
            <annotationProcessorPaths>
              <path>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
              </path>
            </annotationProcessorPaths>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.2.5</version>
          <configuration>
            <argLine>--enable-preview</argLine>
          </configuration>
        </plugin>

        <plugin>
          <groupId>net.revelc.code.formatter</groupId>
          <artifactId>formatter-maven-plugin</artifactId>
          <version>2.29.0</version>
          <executions>
            <execution>
              <goals>
                <goal>format</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-maven-plugin</artifactId>
          <version>${spring.boot.starter.version}</version>
          <executions>
            <execution>
              <id>build-info</id>
              <goals>
                <goal>build-info</goal>
              </goals>
              <configuration>
                <additionalProperties>
                  <encoding.source>UTF-8</encoding.source>
                  <encoding.reporting>UTF-8</encoding.reporting>
                  <java.source>${java.version}</java.source>
                </additionalProperties>
              </configuration>
            </execution>
            <execution>
              <id>executable</id>
              <goals>
                <goal>repackage</goal>
              </goals>
              <configuration>
                <executable>true</executable>
                <jvmArguments>--enable-preview</jvmArguments>
              </configuration>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
  <modules>
    <module>event</module>
    <module>artcoded</module>
  </modules>
</project>
